--- a/20180821-cal_fires/california_fires.Rmd
+++ b/20180821-cal_fires/california_fires.Rmd
@@ -32,23 +32,74 @@ calfire_frap <- calfire_frap_raw
 ```
 
 ### Total number of fires over time
-
 Recent trends indicate this has steadily been on the decline over the years
+
 ```{r}
-calfire_incidents %>%
-  ggplot() + 
-  geom_bar(aes(year, fires), 
-           stat = 'identity')
+calfire_incidents %>% 
+  ggplot(aes(year, fires)) + 
+  geom_bar(stat = 'identity',
+           fill = "#de2d26") +
+  scale_y_continuous(labels = comma_format()) +
+  labs(x = "",
+       y = "")
 ```
+Note: missing data for year of 1976
 
 ### Damage over time
-
-Increase in dollar damage over time may indicate 1) where the fires are actually happening and 2) if more people are living in more fire-prone areas of California
+Increase in dollar damage over time may suggest 1) where the fires are actually happening and 2) if more people are living in more fire-prone areas of California
 ```{r}
 calfire_incidents %>%
   inner_join(inflation) %>%
-  mutate(inflation_dmg = `2016_damage` / acres_burned) %>%
+  mutate(inflation_dmg = `2016_damage` / acres_burned) %>% 
   ggplot() +
   geom_bar(aes(year, inflation_dmg), 
-           stat = 'identity')
+           stat = 'identity',
+           fill = '#de2d26') +
+  scale_y_continuous(labels = dollar_format()) +
+  labs(x = "",
+       y = "",
+       title = "$ Damage by Acres per year - adjusted for inflation (log10 scale)")
 ```
+
+### What is the primary cause of forest fires?
+```{r}
+# make "cause coding" table
+cause <- c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19)
+description <- c('Lightning','Equipment Use','Smoking','Campfire','Debris','Railroad','Arson','Playing with Fire','Miscellaneous','Vehicle','Power Line','Firefighter Training','Non-Firefighter Training','Unknown/Unidentified','Structure','Aircraft','Volcanic','Escaped Prescribed Burn','Illegal Alien Campfire')
+cause_coding <- as_tibble(cbind(cause, description))
+
+# convert original variable to character to allow for joining of data
+calfire_frap$cause <-as.character(calfire_frap$cause)
+
+calfire_frap %>% 
+  select(year_, cause, state) %>%
+  inner_join(cause_coding) %>%
+  group_by(year_, description, state) %>%
+  count() %>%
+  ungroup() %>%
+  ggplot(aes(state, description, fill = n)) + 
+  geom_tile() +
+  scale_fill_gradient2(
+    name = 'n',
+    low = '#fee0d2',
+    mid = '#fc9272',
+    high = '#de2d26',
+    midpoint = 150
+  ) +
+  theme_classic() +
+  labs(x = "",
+       y = "")
+```
+
+### Which agency handles the most fires over the years?
+```{r}
+calfire_frap %>%
+  select(year_, agency) %>%
+  group_by(year_, agency) %>%
+  count() %>%
+  ungroup() %>%
+  ggplot(aes(year_, n)) +
+  geom_line(aes(color = agency))
+
+```
+
